logo fix on small screen h1

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,7 +267,7 @@ h6 {
   #hero h1 {
     font-size: 32px;
     line-height: 36px;
-    margin-top: 80px;
+    margin-top: 20px;
     height: 120%;
   }
 }
